--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/wled/manifest.json">
     <link rel="stylesheet" href="styles.css">
     <script>
         if ('serviceWorker' in navigator) {
