--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js').then((registration) => {
+                navigator.serviceWorker.register('/wled/service-worker.js').then((registration) => {
                     console.log('Service Worker registriert:', registration);
                 }).catch((error) => {
                     console.error('Service Worker-Registrierung fehlgeschlagen:', error);
